Fix own messages alignment issue

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -318,6 +318,7 @@ html {
 
 .right {
   margin-left: 50%;
+  align-items: flex-end;
 }
 
 .my-color {
